<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_general"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/texto_pulsar"

           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/texto_boton_normal"
           android:gravity="end|center_vertical"
           />


   </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fondo_boton"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_boton_imagen"
            android:gravity="end|center_vertical"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ToggleButton
            android:id="@+id/toggle_estado"
            android:checked="false"
            android:textOn=""
            android:textOff=""
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_toggle"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_boton_toggle"
            android:gravity="end|center_vertical"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_superior"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/grupo_radios"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_ra1"
                android:id="@+id/radio_uno"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_ra2"
                android:id="@+id/radio_dos"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_ra3"
                android:id="@+id/radio_tres"
                />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resultado_group"
            android:gravity="center_vertical|end"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_estado"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/texto_check"

            />

    </LinearLayout>


    <FrameLayout
        android:layout_marginTop="@dimen/margin_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/fondofl"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_pulsar"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Explicacion FL"
            android:layout_gravity="bottom|center_horizontal"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            />


    </FrameLayout>

    <Button
        android:layout_marginTop="@dimen/margin_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/texto_pulsar"
        android:id="@+id/boton_pulsar"
        />




</LinearLayout>